syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hazelcast.usercode.grpc.controller";
option java_outer_classname = "ControllerServiceTopLevel";

package controller;

service Controller {
  rpc Create (CreateRequest) returns (CreateResponse) {}
  rpc Delete (DeleteRequest) returns (Empty) {}
}

message CreateRequest {
  string image = 1;
}

message CreateResponse {
  string name = 1;
}

message DeleteRequest {
  string name = 1;
}

message Empty {}